add spring support to game Yeye note: player and enemy doesn't shoot, bug needs fixing